--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   </picture>
   <main>
     <h1>Dharks</h1>
-    <article>
+    <div class="scroll-down">About Me</div>
+    <article class="first-article">
       <h2>What are dharks?</h2>
       <p>
         Dog Sharks (<em>selachimorpha canis</em>), often called dharks, are a group of
