fixed pictures and stuff

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </picture>
   <main>
     <h1>Dharks</h1>
-    <div class="scroll-down">About Me</div>
+    <div class="scroll-down">About Us</div>
     <article class="first-article">
       <h2>What are dharks?</h2>
       <p>
@@ -136,6 +136,51 @@
       </ol>
       <a href="form/" class="button">Sign Up For Spam</a>
     </article>
+    <section>
+      <h2>Our Projects</h2>
+      <div class="cards">
+        <div class="card">
+          <a href="">
+            <div class="image-wrapper">
+              <img src="images/conservation400.jpg" alt="dhark conservation">
+            </div>
+            <div class="overlay">
+              <p>conservation</p>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="">
+            <div class="image-wrapper">
+              <img src="images/education400.jpg" alt="educating people about dharks">
+            </div>
+            <div class="overlay">
+              <p>education</p>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="">
+            <div class="image-wrapper">
+              <img src="images/dhark-shirt400.jpg" alt="t-shirt">
+            </div>
+            <div class="overlay">
+              <p>t-shirts</p>
+            </div>
+          </a>
+        </div>
+        <div class="card">
+          <a href="">
+            <div class="image-wrapper">
+              <img src="images/shrek400.png" alt="shrek">
+            </div>
+            <div class="overlay">
+              <p>onions</p>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
   </main>
 
   <aside>
@@ -151,9 +196,6 @@
     <p>
       Dharks are fantastic creatures
     </p>
-    <svg viewBox="0 0 200 200" width="200" height="200">
-      <circle cx="100" cy="100" r="80" fill="#ffc068" stroke-width="10" stroke="#111111"></circle>
-    </svg>
   </footer>
 </body>
 
