--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
   <aside>
     <h2>Laser Shark</h2>
-    <img src="images/laser-shark600.jpg" alt="shark with frickin laser beams" loading="lazy">
+    <img src="images/laser-shark600.jpg" alt="shark with frickin laser beams">
     <p>
       The laser shark (<em>selachimorpha laseri</em>) is a close relative to the dhark, likely splitting evolutionarily
       in the 1960's.
